--- a/owo/test.yaml
+++ b/owo/test.yaml
@@ -85,68 +85,108 @@ dns:
       - 240.0.0.0/4
       - 0.0.0.0/32
 
+
+
+#代理协议
 proxies:
-  - {"name":"纽约\r","type":"vless","server":"107.172.157.22","port":5492,"udp":true,"uuid":"f9915bc7-70d4-4c3a-b6d4-4c420b33f234","tls":true,"servername":"www.apple.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"28LFC52uLAiGl6RYJ1qHXzdfMTCxyeXpFzo0b0QeFSg"},"client-fingerprint":"ios"}
-  - {"name":"日本\r","type":"vless","server":"20.89.94.99","port":5684,"udp":true,"uuid":"f64cb7ac-0206-48ee-a3b9-bd931d2fe0f4","tls":true,"servername":"www.bandai.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"3HxMYL6pUi4i8CtLgS7apbo2V-COyFimf9lktCLPERY"},"client-fingerprint":"ios"}
-  - {"name":"日本IPV6\r","type":"vless","server":"[2603","port":1040,"udp":true,"uuid":"f64cb7ac-0206-48ee-a3b9-bd931d2fe0f4","tls":true,"servername":"www.bandai.com","flow":"xtls-rprx-vision","network":"tcp","reality-opts":{"public-key":"3HxMYL6pUi4i8CtLgS7apbo2V-COyFimf9lktCLPERY"},"client-fingerprint":"ios"}
-  - {"name":"WARP+T","type":"wireguard","server":"162.159.193.10","port":2408,"udp":true,"ip":"172.16.0.2","ipv6":"2606:4700:110:81f8:4ba1:fdd8:4a8c:ae77","private-key":"iF29Ic/ZeH1a+wuWi4J9SllKfzJSf8X3B9d2Pos6w0Q=","public-key":"bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=","dns":["1.1.1.1"],"mtu":1280,"remote-dns-resolve":true}
+#==============================（vless-reality-vision节点）
+- name: Xray日本                               #可自定义名称
+  type: vless
+  server: 20.89.94.99                          #解析的域名或IP
+  port: 5684                                   #自定义的端口
+  uuid: f64cb7ac-0206-48ee-a3b9-bd931d2fe0f4   #自定义的uuid
+  network: tcp
+  udp: true
+  tls: true
+  flow: xtls-rprx-vision
+  servername: www.bandai.com                      #自定义的第三方域名
+  reality-opts: 
+    public-key: 3HxMYL6pUi4i8CtLgS7apbo2V-COyFimf9lktCLPERY    #自定义的public-key
+    short-id:                                  #自定义的short-id
+  client-fingerprint: ios                      #自定义的浏览器指纹
+
+- name: Xray日本IPV6                           #可自定义名称
+  type: vless
+  server: 2603:1040:404:3::21f                 #解析的域名或IP
+  port: 5684                                   #自定义的端口
+  uuid: f64cb7ac-0206-48ee-a3b9-bd931d2fe0f4   #自定义的uuid
+  network: tcp
+  udp: true
+  tls: true
+  flow: xtls-rprx-vision
+  servername: www.bandai.com                     #自定义的第三方域名
+  reality-opts: 
+    public-key: 3HxMYL6pUi4i8CtLgS7apbo2V-COyFimf9lktCLPERY    #自定义的public-key
+    short-id:                                 #自定义的short-id
+  client-fingerprint: ios                     #自定义的浏览器指纹
+
+- name: Xray纽约                               #可自定义名称
+  type: vless
+  server: 107.172.157.22                       #解析的域名或IP
+  port: 5492                                   #自定义的端口
+  uuid: f9915bc7-70d4-4c3a-b6d4-4c420b33f234   #自定义的uuid
+  network: tcp
+  udp: true
+  tls: true
+  flow: xtls-rprx-vision
+  servername: www.apple.com                       #自定义的第三方域名
+  reality-opts: 
+    public-key: 28LFC52uLAiGl6RYJ1qHXzdfMTCxyeXpFzo0b0QeFSg    #自定义的public-key
+    short-id:                                 #自定义的short-id
+  client-fingerprint: ios                     #自定义的浏览器指纹
+
+
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - "纽约\r"
-      - "日本\r"
-      - "日本IPV6\r"
-      - WARP+T
+      - "Xray纽约"
+      - "Xray日本IPV6"
+      - "Xray日本"
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
-      - "纽约\r"
-      - "日本\r"
-      - "日本IPV6\r"
-      - WARP+T
+      - "Xray纽约"
+      - "Xray日本IPV6"
+      - "Xray日本"
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - "纽约\r"
-      - "日本\r"
-      - "日本IPV6\r"
-      - WARP+T
+      - "Xray纽约"
+      - "Xray日本IPV6"
+      - "Xray日本"
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - "纽约\r"
-      - "日本\r"
-      - "日本IPV6\r"
-      - WARP+T
+      - "Xray纽约"
+      - "Xray日本IPV6"
+      - "Xray日本"
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - "纽约\r"
-      - "日本\r"
-      - "日本IPV6\r"
-      - WARP+T
+      - "Xray纽约"
+      - "Xray日本IPV6"
+      - "Xray日本"
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - "纽约\r"
-      - "日本\r"
-      - "日本IPV6\r"
-      - WARP+T
+      - "Xray纽约"
+      - "Xray日本IPV6"
+      - "Xray日本"
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -169,10 +209,9 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - "纽约\r"
-      - "日本\r"
-      - "日本IPV6\r"
-      - WARP+T
+      - "Xray纽约"
+      - "Xray日本IPV6"
+      - "Xray日本"
 
 rules:
 # 本地/局域网地址
