--- a/owo/clashmeta.yaml
+++ b/owo/clashmeta.yaml
@@ -1,8 +1,4 @@
-#====clash-meta精简模版=====
-#====参考自clash-meta官方文档：wiki.metacubex.one=====
-
-#clash配置
-#dns可自行修改
+# clash Meta
 mixed-port: 7890
 allow-lan: true
 log-level: info
@@ -82,113 +78,78 @@ dns:
       - 240.0.0.0/4
       - 0.0.0.0/32
 
-
-
-#代理协议
+# 代理协议
 proxies:
-#==============================（vless-reality-vision节点）
-- name: Xray日本                               #可自定义名称
+# ==============================（vless-reality-vision节点）
+- name: Xray日本                               # 可自定义名称
   type: vless
-  server: 20.89.94.99                          #解析的域名或IP
-  port: 5684                                   #自定义的端口
-  uuid: f64cb7ac-0206-48ee-a3b9-bd931d2fe0f4   #自定义的uuid
+  server: 20.89.94.99                          # 解析的域名或IP
+  port: 5684                                   # 自定义的端口
+  uuid: f64cb7ac-0206-48ee-a3b9-bd931d2fe0f4   # 自定义的uuid
   network: tcp
   udp: true
   tls: true
   flow: xtls-rprx-vision
-  servername: www.bandai.com                      #自定义的第三方域名
+  servername: www.bandai.com                      # 自定义的第三方域名
   reality-opts: 
-    public-key: 3HxMYL6pUi4i8CtLgS7apbo2V-COyFimf9lktCLPERY    #自定义的public-key
-    short-id:                                  #自定义的short-id
-  client-fingerprint: ios                      #自定义的浏览器指纹
+    public-key: 3HxMYL6pUi4i8CtLgS7apbo2V-COyFimf9lktCLPERY    # 自定义的public-key
+    short-id:                                  # 自定义的short-id
+  client-fingerprint: ios                      # 自定义的浏览器指纹
 
-- name: Xray日本IPV6                           #可自定义名称
+- name: Xray日本IPV6                           # 可自定义名称
   type: vless
-  server: 2603:1040:404:3::21f                 #解析的域名或IP
-  port: 5684                                   #自定义的端口
-  uuid: f64cb7ac-0206-48ee-a3b9-bd931d2fe0f4   #自定义的uuid
+  server: [2603:1040:404:3::21f]                 # 解析的域名或IP
+  port: 5684                                   # 自定义的端口
+  uuid: f64cb7ac-0206-48ee-a3b9-bd931d2fe0f4   # 自定义的uuid
   network: tcp
   udp: true
   tls: true
   flow: xtls-rprx-vision
-  servername: www.bandai.com                     #自定义的第三方域名
+  servername: www.bandai.com                     # 自定义的第三方域名
   reality-opts: 
-    public-key: 3HxMYL6pUi4i8CtLgS7apbo2V-COyFimf9lktCLPERY    #自定义的public-key
-    short-id:                                 #自定义的short-id
-  client-fingerprint: ios                     #自定义的浏览器指纹
+    public-key: 3HxMYL6pUi4i8CtLgS7apbo2V-COyFimf9lktCLPERY    # 自定义的public-key
+    short-id:                                 # 自定义的short-id
+  client-fingerprint: ios                     # 自定义的浏览器指纹
 
-- name: Xray纽约                               #可自定义名称
+- name: Xray纽约                               # 可自定义名称
   type: vless
-  server: 107.172.157.22                       #解析的域名或IP
-  port: 5492                                   #自定义的端口
-  uuid: f9915bc7-70d4-4c3a-b6d4-4c420b33f234   #自定义的uuid
+  server: 107.172.157.22                       # 解析的域名或IP
+  port: 5492                                   # 自定义的端口
+  uuid: f9915bc7-70d4-4c3a-b6d4-4c420b33f234   # 自定义的uuid
   network: tcp
   udp: true
   tls: true
   flow: xtls-rprx-vision
-  servername: www.apple.com                       #自定义的第三方域名
+  servername: www.apple.com                       # 自定义的第三方域名
   reality-opts: 
-    public-key: 28LFC52uLAiGl6RYJ1qHXzdfMTCxyeXpFzo0b0QeFSg    #自定义的public-key
-    short-id:                                 #自定义的short-id
-  client-fingerprint: ios                     #自定义的浏览器指纹
+    public-key: 28LFC52uLAiGl6RYJ1qHXzdfMTCxyeXpFzo0b0QeFSg    # 自定义的public-key
+    short-id:                                 # 自定义的short-id
+  client-fingerprint: ios                     # 自定义的浏览器指纹
 
-
-
-#==============================（vless-ws-tls节点）
-- name: vless-ws-tls节点                           #可自定义名称
+# ==============================（vless-ws-tls节点）
+- name: vless-ws-tls节点                           # 可自定义名称
   type: vless
-  server: bvipc.com                          #解析的域名或者优选域名IP
-  port: 12345                                      #自定义的端口
-  uuid: 3cc9a51c-db76-4ad2-a76b-8cb993bddb73       #自定义的uuid
+  server: bvipc.com                          # 解析的域名或者优选域名IP
+  port: 12345                                      # 自定义的端口
+  uuid: 3cc9a51c-db76-4ad2-a76b-8cb993bddb73       # 自定义的uuid
   udp: true
   tls: true
   network: ws
-  servername: bvipc.com                     #sni域名，与下面的host一致
+  servername: bvipc.com                     # sni域名，与下面的host一致
   ws-opts:
-    path: "/?ed=2048"                              #" "内自定义的path路径
+    path: "/?ed=2048"                              # " "内自定义的path路径
     headers:
-      Host: bvipc.com                       #host域名，与上面的servername一致
+      Host: bvipc.com                       # host域名，与上面的servername一致
 
-
-#==============================（hysteria证书节点）
-- name: hysteria证书节点                            #可自定义名称
-  type: hysteria
-  server: yg.ygkkk.eu.org                          #解析的域名
-  port: 12345                                      #自定义的端口，多端口改为 ports:空格1000,2000-3000
-  auth-str: 123456                                 #自定义的密码
-  alpn:
-    - h3
-  protocol: udp                                    #自定义协议：udp/wechat-video/faketcp
-  up: 20                                           #自定义的上传限制
-  down: 100                                        #自定义的下载限制
-  sni: yg.ygkkk.eu.org                             #sni域名，与上面server地址一致  
-  skip-cert-verify: false
-  fast-open: true
-    
-#==============================（hysteria自签节点）
-- name: hysteria自签节点                           #可自定义名称
-  type: hysteria
-  server: 1.2.3.4                                  #服务器本地IP
-  port: 12345                                      #自定义的端口，多端口改为 ports:空格1000,2000-3000
-  auth-str: 123456                                 #自定义的密码
-  alpn:
-    - h3
-  protocol: udp                                    #自定义协议：udp/wechat-video/faketcp
-  up: 20                                           #自定义的上传限制
-  down: 100                                        #自定义的下载限制
-  sni: www.bing.com                                
-  skip-cert-verify: true
-  fast-open: true
-    
-#==============================（warp-wireguard节点）  
-- name: warp-team                                  #可自定义名称
+# ==============================（warp-wireguard节点）  
+- name: warp-team                                  # 可自定义名称
   type: wireguard         
-  server: 162.159.193.10                                     #可自定义优选对端IP，与下面port的端口相对应
-  port: 2408                                                 #可自定义优选对端IP，与上面server的IP相对应
+  server: 162.159.193.10                                     # 可自定义优选对端IP，与下面port的端口相对应
+  port: 2408                                                 # 可自定义优选对端IP，与上面server的IP相对应
   ip: 172.16.0.2
-  ipv6: 2606:4700:110:81f8:4ba1:fdd8:4a8c:ae77               #与private-key相对应，如删除本行，表示仅IPV4
+  ipv6: 2606:4700:110:81f8:4ba1:fdd8:4a8c:ae77               # 与private-key相对应，如删除本行，表示仅IPV4
   public-key: bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=
-  private-key: iF29Ic/ZeH1a+wuWi4J9SllKfzJSf8X3B9d2Pos6w0Q=  #获取private-key，私key
+  private-key: iF29Ic/ZeH1a+wuWi4J9SllKfzJSf8X3B9d2Pos6w0Q=  # 获取private-key，私key
   udp: true
   dns: ["1.1.1.1"]
   mtu: 1280
@@ -196,8 +157,7 @@ proxies:
 
 
 
-#代理分流
-#分流组可自行创建添加，proxies参数下的name节点名称，按需求自行增减，确保出现的name节点名称在二区代理协议中可查找
+# 代理分流
 proxy-groups:
   - name: 🚀 节点选择
     type: select
@@ -284,7 +244,7 @@ proxy-groups:
 
 
 
-#代理规则
+# 代理规则
 rules:
 # 本地/局域网地址
 # 参考：https://en.wikipedia.org/wiki/Reserved_IP_addresses
